--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,7 +2,26 @@
 @import '../node_modules/@glidejs/glide/src/assets/sass/glide.core.scss';
 @import '../node_modules/@glidejs/glide/src/assets/sass/glide.theme.scss';
 
-body {
-    color: yellow;
-    background-color: $backgroundColor;
+*, 
+*::before, 
+*::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+body {
+    background-color: $backgroundColor;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+}
+
+.glider {
+    background-color: white;
+    &__item {
+        padding: 20px;
+        // margin: 5px;
+        border: 1px dotted red;
+    }
+}
+
+
