--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,14 +13,51 @@ body {
     background-color: $backgroundColor;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
+    padding-top: 40px;
+
+}
+.glider-container {
+    border: 1px dotted yellowgreen;
+    position: relative;
+    max-width: 90%;
+    margin: 0 auto;
 }
 
 .glider {
-    background-color: white;
+    // background-color: white;
+    // position: relative;
+    .glider-track {
+        height: 500px;
+    }
+    
     &__item {
-        padding: 20px;
-        // margin: 5px;
+        margin: 5px;
         border: 1px dotted red;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__button {
+        width: 50px;
+        height: 50px;
+        background-color: aqua;
+    }
+
+    &__prev {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
+    &__next {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+
     }
 }
 
