--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,14 +26,13 @@ body {
 .glider {
     // background-color: white;
     // position: relative;
-    .glider-track {
-        height: 500px;
+    &-track {
+        height: 600px;
     }
     
     &__item {
         margin: 5px;
         border: 1px dotted red;
-
         img {
             width: 100%;
             height: 100%;
