--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,14 @@
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing; }
 
+.topbar {
+  background-color: bisque;
+  height: 60px;
+  width: 100%;
+  margin-bottom: 40px;
+  padding-left: 150px;
+  display: flex; }
+
 *,
 *::before,
 *::after {
@@ -121,8 +129,7 @@
 body {
   background-color: #eee;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px;
-  padding-top: 40px; }
+  font-size: 16px; }
 
 .glider-container {
   border: 1px dotted yellowgreen;
