ready to go, setup the sass folder strcture.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,19 @@
-@import './colors';
-@import '../node_modules/@glidejs/glide/src/assets/sass/glide.core.scss';
-@import '../node_modules/@glidejs/glide/src/assets/sass/glide.theme.scss';
+@import './abstract/colors';
+@import './abstract/functions';
+@import './abstract/mixins';
+@import './abstract/variables';
+@import './abstract/vendors';
+
+@import './base/animations';
+@import './base/base';
+@import './base/typography';
+@import './base/utilities';
+
+@import './components/hero-slider';
+
+@import './layout/topbar';
+
+// @import './pages/'
 
 @import './layout/topbar';
 
@@ -15,49 +28,11 @@ body {
     background-color: $backgroundColor;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
-}
-.glider-container {
-    border: 1px dotted yellowgreen;
-    position: relative;
-    max-width: 90%;
-    margin: 0 auto;
+
+    @include respond(phone) {
+        background-color: red;
+    }
 }
 
-.glider {
-    // background-color: white;
-    // position: relative;
-    &-track {
-        height: 600px;
-    }
-    
-    &__item {
-        margin: 5px;
-        border: 1px dotted red;
-        img {
-            width: 100%;
-            height: 100%;
-        }
-    }
-
-    &__button {
-        width: 50px;
-        height: 50px;
-        background-color: aqua;
-    }
-
-    &__prev {
-        position: absolute;
-        top: 50%;
-        left: 0;
-        transform: translateY(-50%);
-    }
-    &__next {
-        position: absolute;
-        top: 50%;
-        right: 0;
-        transform: translateY(-50%);
-
-    }
-}
 
 
