--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,10 @@
+/*
+0     - 600PX : Phone
+600px - 900px : Tablet portriat
+900px - 1200px: Tablet Landscape
+[1200 - 1800] is where our normal style apply.
+1800px + : Big desktops.
+*/
 .glide {
   position: relative;
   width: 100%;
@@ -111,26 +118,6 @@
   cursor: -moz-grabbing;
   cursor: -webkit-grabbing; }
 
-.topbar {
-  background-color: bisque;
-  height: 60px;
-  width: 100%;
-  margin-bottom: 40px;
-  padding-left: 150px;
-  display: flex; }
-
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box; }
-
-body {
-  background-color: #eee;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px; }
-
 .glider-container {
   border: 1px dotted yellowgreen;
   position: relative;
@@ -163,3 +150,42 @@ body {
   top: 50%;
   right: 0;
   transform: translateY(-50%); }
+
+.topbar {
+  background-color: bisque;
+  height: 60px;
+  width: 100%;
+  margin-bottom: 40px;
+  padding-left: 150px;
+  display: flex; }
+
+html[dir="rtl"] .topbar {
+  padding-left: 0;
+  padding-right: 150px; }
+
+.topbar {
+  background-color: bisque;
+  height: 60px;
+  width: 100%;
+  margin-bottom: 40px;
+  padding-left: 150px;
+  display: flex; }
+
+html[dir="rtl"] .topbar {
+  padding-left: 0;
+  padding-right: 150px; }
+
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
+
+body {
+  background-color: #eee;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px; }
+  @media (max-width: 37.5em) {
+    body {
+      background-color: red; } }
