--- a/scss/layout/_topbar.scss
+++ b/scss/layout/_topbar.scss
@@ -4,9 +4,19 @@
     width: 100%;
     margin-bottom: 40px;
     padding-left: 150px;
-    
+
     display: flex;
 
 }
 
+
+
+//Arabic version.
+/////////////////
+
+
+html[dir="rtl"] .topbar {
+    padding-left: 0;
+    padding-right: 150px;
+}
 
