--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,14 +17,44 @@
 
 @import './layout/topbar';
 
+:root {
+    --color-topbar-background: pink;
+}
+
 *, 
 *::before, 
 *::after {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
+
+html {
+    font-size: 62.5%;    //  1 rem =  10px;    10px/16px = 62.5%;
+
+    @include respond(tab-land) {
+        font-size: 56.25% // 1 rem = 9px, 9/16 = 56.25%
+    }
+    @include respond(tab-port) {
+        font-size: 50% // 1 rem = 8px, 8/16 = 50%
+
+    }
+    @include respond(phone) {
+        font-size: 30% // 1 rem = 4.8px, 4.8/16 = 30%
+
+    }
+    @include respond(big-desktop) {
+        font-size: 75% // 1 rem = 12px, 12/16 = 75%
+
+    }
+}
+
+
+
 body {
+    box-sizing: border-box;
+
+
     background-color: $backgroundColor;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
