--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,4 +1,6 @@
 .test-para-container {
+    padding: 2rem;
+    margin-top: 4rem;
     font-size: calc(14px + (17 - 14) * ((100vw - 300px) / (1200 - 600)));
     
 }
